2011-08-29  Albert Chu <chu11@llnl.gov>

	* Merge from branch dcmiupdate.  Make additions in DCMI v1.5 specification.

2011-08-25  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support
	IPMI_SENSOR_READ_FLAGS_IGNORE_SCANNING_DISABLED sensor-read
	workaround flag.

	* ipmi-sensors/: Support 'ignorescanningdisabled' workaround
	option.
	
2011-08-09  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/bmc-watchdog.logrotate: Reduce logrotate output spam.
	
2011-07-20  Arnaud Quette <arnaud.quette@free.fr>

	* ipmi-fru/src/ipmi-fru-output.c: Fix typo.
	
2011-07-11  Albert Chu <chu11@llnl.gov>

	* Support Supermicro X8SIL-F OEM Sensors.
	
2011-06-30  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-output.c (_output_field): Remove cut and
	paste duplicate code.
	
2011-06-29  Arnaud Quette <arnaud.quette@free.fr>

	* configure.ac, Makefile.am: fix m4 macro reference for libtoolize.
	This allows to call the system provided 'autoreconf' instead of autogen.sh

2011-06-29  Arnaud Quette <arnaud.quette@free.fr>

	* configure.ac: fix indentation inconsistencies, remove extraneous spaces
	and escape single quotes that break some color highlighting systems.

2011-06-30  Arnaud Quette <arnaud.quette@free.fr>

	* configure.ac: add AM_PROG_CC_C_O, needed for per-target flags
	  (ipmipower/src/Makefile.am and ipmipower/src/argv.c)

2011-06-29  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add pkg-config files.

2011-06-28  Arnaud Quette <arnaud.quette@free.fr>

	* Add pkg-config support for all FreeIPMI libraries.

2011-05-31  Albert Chu <chu11@llnl.gov>

	* Fix typo globally, IPMI_CMD_DCMI_GET_DCMI_CAPABILITIY_INFO to
	IPMI_CMD_DCMI_GET_DCMI_CAPABILITY_INFO.

2011-05-24  Holger Liebig <holger.liebig@ts.fujitsu.com>

	* ipmi-dcmi/src/ipmi-dcmi.c: Fix asset tag/string identifier
	overwriting bug.  Update to handle setting asset tag and
	management identifier string according to DCMI v1.5 spec.

2011-05-18  Albert Chu <chu11@llnl.gov>
