@@ -584,10 +584,12 @@
 #
 ##########################################################################################################
 #
-## Supermicro X7DBR-3/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL-3F CPU Temperature Sensor
+## Supermicro CPU Temperature Sensor
+## (X7DBR-3/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL-3F/X8SIL-FX9SCL/X9SCM)
 ##
 ## Manufacturer ID = 10437 (Peppercon, IPMI card manufacturer), 47488 (Supermicro, not IANA number, special case)
-## Product ID = 4 (X7DBR-3), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+), 6 (X8DTL-3F), 1541 (X8SIL-F)
+## Product ID = 4 (X7DBR-3), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+),
+##              6 (X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM)
 ## Event/Reading Type Code = 70h (OEM)
 ## Sensor Type = C0h (OEM)
 ## Value 0x0000 = "Low"
@@ -598,11 +600,11 @@
 ##
 ## Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
 #
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541 0x70 0xC0 0x0000 Nominal
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541 0x70 0xC0 0x0001 Warning
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541 0x70 0xC0 0x0002 Warning
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541 0x70 0xC0 0x0004 Critical
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541 0x70 0xC0 0x0007 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572 0x70 0xC0 0x0000 Nominal
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572 0x70 0xC0 0x0001 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572 0x70 0xC0 0x0002 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572 0x70 0xC0 0x0004 Critical
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572 0x70 0xC0 0x0007 Warning
 #
 ##########################################################################################################
 #
